# crud-usuarios-produtos

./: Dockerfile  LICENSE  README.md  migration.sql  projetoHello.cabal
app/: Main.hs
app/Api/: Model.hs
app/Server/: Routes.hs
backend/: main.hs  produtos.hs  types.hs  usuarios.hs
frontend/: app.js  catalogo.html  catalogo.js  index.html  index.js  styles.css
